Fix clicking on links in PDFs on Big Sur after r266654 https://bugs.webkit.org/show_bug.cgi?id=219665 <rdar://problem/72080683>

Patch by Alex Christensen <achristensen@webkit.org> on 2020-12-09
Reviewed by Tim Horton.

mouseUp: was being called by AppKit on the WKPDFHUDView instead of the WKWebView, causing the event to not make it to the PDFPlugin,
which meant PDFKit wasn't being told it was clicked on, which means it wasn't telling WebKit to change the frame's location.
Overriding hitTest to forward all mouse events to the WKWebView solves this problem.

Covered by the WebKit.PDFLinkReferrer API test, which was failing on Big Sur, where ENABLE(UI_PROCESS_PDF_HUD) is true.

* UIProcess/PDF/WKPDFHUDView.mm:
(-[WKPDFHUDView hitTest:]):

Canonical link: https://commits.webkit.org/232264@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270593 268f45cc-cd09-0410-ab3c-d52691b4dbfc